--- a/app/src/main/res/layout/item_recyclerview_main.xml
+++ b/app/src/main/res/layout/item_recyclerview_main.xml
@@ -41,7 +41,7 @@
                 app:layout_constraintTop_toTopOf="parent">
 
             <TextView
-                    android:id="@+id/textClickTitwlItem"
+                    android:id="@+id/textClickTitleItem"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
