(KASINPOD) update search

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -27,6 +27,7 @@
                     android:cursorVisible="false"
                     android:textColorHint="@color/greyDark"
                     android:textSize="14sp"
+                    android:imeOptions="actionDone"
                     android:paddingTop="4dp"
                     android:paddingBottom="4dp"
                     android:inputType="text"
