--- a/app/src/main/res/layout/item_recyclerview_herbs.xml
+++ b/app/src/main/res/layout/item_recyclerview_herbs.xml
@@ -18,6 +18,7 @@
                 android:id="@+id/imgHerb"
                 android:layout_width="match_parent"
                 android:layout_height="110dp"
+                android:scaleType="centerCrop"
                 android:background="@android:color/white"/>
 
         <TextView
