--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -15,6 +15,7 @@
             android:orientation="vertical">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/contentSearch"
                 android:layout_width="match_parent"
                 android:background="@color/white"
                 android:layout_height="wrap_content">
@@ -82,6 +83,7 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.core.widget.NestedScrollView
+                android:id="@+id/nestedScrollView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 app:layout_constraintStart_toStartOf="parent"
