--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -8,19 +8,23 @@
             android:title="หน้าหลัก"/>
 
     <item
-            android:id="@+id/game"
-            android:icon="@drawable/icon_bame"
-            android:title="เล่นเกม"/>
-
-    <item
             android:id="@+id/gallery"
             android:icon="@drawable/icon_gallery"
             android:title="แกลอรี่"/>
+    <item
+            android:id="@+id/game"
+            android:checkable="false"
+            android:title="เล่นเกม"/>
 
     <item
             android:id="@+id/profile"
             android:icon="@drawable/icon_user"
             android:title="โปรไฟล์"/>
+
+    <item
+            android:id="@+id/setting"
+            android:icon="@drawable/icon_bame"
+            android:title="เล่นเกม"/>
 
 
 </menu>
