--- a/app/src/main/res/drawable/bg_search_gray.xml
+++ b/app/src/main/res/drawable/bg_search_gray.xml
@@ -3,8 +3,10 @@
         android:shape="rectangle">
 
     <stroke
-        android:width="0.5dp"
-        android:color="#ACA9A9" />
+            android:width="0.5dp"
+            android:color="#ACA9A9" />
+
+    <solid android:color="@color/colorLightgrey"/>
 
     <corners android:radius="32dp" />
 
