--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,128 +1,127 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
-        android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/white"
         tools:context=".ui.home.HomeFragment">
 
     <LinearLayout
-            android:id="@+id/pageHome"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/contentSearch"
-                android:layout_width="match_parent"
-                android:background="@color/white"
-                android:layout_height="wrap_content">
+        <include
+                android:id="@+id/heard_main"
+                layout="@layout/header_toolbar_main"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content" />
 
-            <EditText
-                    android:id="@+id/editTextSearchHome"
-                    android:layout_width="0dp"
-                    android:background="@drawable/bg_search"
-                    android:paddingLeft="32dp"
-                    android:hint="ค้นหาสมุนไพร"
-                    android:cursorVisible="false"
-                    android:textColorHint="@color/greyDark"
-                    android:textSize="14sp"
-                    android:imeOptions="actionDone"
-                    android:paddingTop="4dp"
-                    android:paddingBottom="4dp"
-                    android:inputType="text"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toStartOf="@+id/textViewSearchHome"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginBottom="8dp"/>
-
-            <ImageView
-                    android:src="@drawable/icon_search"
-                    android:tint="@color/greyDark"
-                    android:layout_width="16dp"
-                    android:layout_height="16dp"
-                    app:layout_constraintBottom_toBottomOf="@+id/editTextSearchHome"
-                    android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toTopOf="@+id/editTextSearchHome"
-                    app:layout_constraintStart_toStartOf="@+id/editTextSearchHome" android:layout_marginStart="8dp"
-                    android:layout_marginBottom="8dp"/>
-
-            <ImageView
-                    android:layout_width="16dp"
-                    android:src="@drawable/icon_cancel"
-                    android:tint="@color/greyDark"
-                    android:layout_height="16dp"
-                    app:layout_constraintEnd_toEndOf="@+id/editTextSearchHome"
-                    android:layout_marginEnd="8dp"
-                    app:layout_constraintTop_toTopOf="@+id/editTextSearchHome"
-                    android:layout_marginBottom="8dp"
-                    app:layout_constraintBottom_toBottomOf="@+id/editTextSearchHome"
-                    android:layout_marginTop="8dp"
-                    android:id="@+id/imageViewDelete"/>
-
-            <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="ค้นหา"
-                    android:textSize="14sp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    android:layout_marginBottom="8dp"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginEnd="16dp"
-                    android:id="@+id/textViewSearchHome"/>
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <androidx.core.widget.NestedScrollView
-                android:id="@+id/nestedScrollView"
+        <LinearLayout
+                android:id="@+id/pageHome"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent">
+                android:orientation="vertical">
 
-            <LinearLayout
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/contentSearch"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/white">
+
+                <TextView
+                        android:id="@+id/editTextSearchHome"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginEnd="8dp"
+                        android:layout_marginBottom="8dp"
+                        android:background="@drawable/bg_search"
+                        android:hint="ค้นหาสมุนไพร"
+                        android:paddingLeft="32dp"
+                        android:paddingTop="4dp"
+                        android:paddingBottom="4dp"
+                        android:textColorHint="@color/greyDark"
+                        android:textSize="14sp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toStartOf="@+id/textViewSearchHome"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                <ImageView
+                        android:layout_width="16dp"
+                        android:layout_height="16dp"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginBottom="8dp"
+                        android:src="@drawable/icon_search"
+                        android:tint="@color/greyDark"
+                        app:layout_constraintBottom_toBottomOf="@+id/editTextSearchHome"
+                        app:layout_constraintStart_toStartOf="@+id/editTextSearchHome"
+                        app:layout_constraintTop_toTopOf="@+id/editTextSearchHome" />
+
+
+                <TextView
+                        android:id="@+id/textViewSearchHome"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginEnd="16dp"
+                        android:layout_marginBottom="8dp"
+                        android:text="ค้นหา"
+                        android:textSize="14sp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.core.widget.NestedScrollView
+                    android:id="@+id/nestedScrollView"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="vertical">
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent">
 
-                <com.smarteist.autoimageslider.SliderView
-                        android:id="@+id/imageSlider"
+                <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="150dp"
-                        app:sliderAnimationDuration="600"
-                        app:sliderAutoCycleDirection="back_and_forth"
-                        app:sliderAutoCycleEnabled="true"
-                        app:sliderCircularHandlerEnabled="true"
-                        app:sliderIndicatorAnimationDuration="600"
-                        app:sliderIndicatorGravity="center_horizontal|bottom"
-                        app:sliderIndicatorMargin="15dp"
-                        app:sliderIndicatorOrientation="horizontal"
-                        app:sliderIndicatorPadding="3dp"
-                        app:sliderIndicatorRadius="2dp"
-                        app:sliderIndicatorSelectedColor="#5A5A5A"
-                        app:sliderIndicatorUnselectedColor="#FFF"
-                        app:sliderScrollTimeInSec="1"
-                        app:sliderStartAutoCycle="true"/>
+                        android:layout_height="match_parent"
+                        android:orientation="vertical">
 
-                <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/mainRecyclerViewHome"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
+                    <com.smarteist.autoimageslider.SliderView
+                            android:id="@+id/imageSlider"
+                            android:layout_width="match_parent"
+                            android:layout_height="150dp"
+                            app:sliderAnimationDuration="600"
+                            app:sliderAutoCycleDirection="back_and_forth"
+                            app:sliderAutoCycleEnabled="true"
+                            app:sliderCircularHandlerEnabled="true"
+                            app:sliderIndicatorAnimationDuration="600"
+                            app:sliderIndicatorGravity="center_horizontal|bottom"
+                            app:sliderIndicatorMargin="15dp"
+                            app:sliderIndicatorOrientation="horizontal"
+                            app:sliderIndicatorPadding="3dp"
+                            app:sliderIndicatorRadius="2dp"
+                            app:sliderIndicatorSelectedColor="#5A5A5A"
+                            app:sliderIndicatorUnselectedColor="#FFF"
+                            app:sliderScrollTimeInSec="1"
+                            app:sliderStartAutoCycle="true" />
 
-                </androidx.recyclerview.widget.RecyclerView>
+                    <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/mainRecyclerViewHome"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent">
 
-            </LinearLayout>
+                    </androidx.recyclerview.widget.RecyclerView>
 
-        </androidx.core.widget.NestedScrollView>
+                </LinearLayout>
+
+            </androidx.core.widget.NestedScrollView>
+
+        </LinearLayout>
 
     </LinearLayout>
 
@@ -131,24 +130,24 @@
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:layout_gravity="center"
-            app:circlesColor="@color/greenDark"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
             android:visibility="gone"
+            app:circlesColor="@color/greenDark"
             app:circlesCount="5"
             app:circlesRadius="6dp"
             app:rotationDuration="3000"
-            app:showLeadingLine="false"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp" />
+            app:showLeadingLine="false" />
 
     <TextView
             android:id="@+id/homeErrorText"
             android:layout_width="wrap_content"
-            android:layout_gravity="center"
             android:layout_height="wrap_content"
-            android:visibility="gone"
+            android:layout_gravity="center"
+            android:text="แจ้งเตือน ERROR"
             android:textSize="14sp"
-            android:text="แจ้งเตือน ERROR"/>
+            android:visibility="gone" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
