(KASINPOD) update descripetion

--- a/app/src/main/res/layout/header_toolbar_search.xml
+++ b/app/src/main/res/layout/header_toolbar_search.xml
@@ -16,10 +16,10 @@
                 android:layout_width="0dp"
                 android:background="@drawable/bg_search_gray"
                 android:paddingLeft="32dp"
-                android:hint="ค้นหาสมุนไพร"
+                android:hint="ค้นหาสมุนไพรตามอาการป่วย"
                 android:textColorHint="@color/greyDark"
                 android:textSize="14sp"
-                android:imeOptions="actionDone"
+                android:imeOptions="actionSearch"
                 android:paddingTop="4dp"
                 android:paddingBottom="4dp"
                 android:inputType="text"
