--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -44,6 +44,8 @@
                 android:id="@+id/image_profile"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
+                android:padding="3dp"
+                android:background="@drawable/bg_image"
                 android:src="@drawable/icon_photo_placeholder" />
 
         <TextView
@@ -71,7 +73,7 @@
             android:id="@+id/linearLayout2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#FFF3E0"
+            android:background="#FFF8E1"
             android:gravity="center"
             android:orientation="vertical"
             android:padding="16dp"
@@ -80,12 +82,15 @@
             app:layout_constraintStart_toStartOf="parent">
 
         <ImageView
-                android:layout_width="32dp"
-                android:layout_height="32dp"
+                android:layout_width="28dp"
+                android:layout_height="28dp"
+                android:tint="#424242"
                 android:src="@drawable/icon_setting" />
 
         <TextView
+                android:layout_marginTop="5dp"
                 android:layout_width="wrap_content"
+                android:textSize="12sp"
                 android:layout_height="wrap_content"
                 android:textColor="@color/black"
                 android:text="แก้ไขโปรไฟล์" />
