--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,4 +13,8 @@
     <dimen name="margin_8_dp">8dp</dimen>
     <dimen name="width_image_tracking_status">50dp</dimen>
     <dimen name="height_image_tracking_status">50dp</dimen>
+    <dimen name="list_item_spacing">16dp</dimen>
+    <dimen name="list_item_spacing_half">8dp</dimen>
+
+    <dimen name="demo_sheet_rounded_corner">16dp</dimen>
 </resources>
