--- a/app/src/main/res/layout/item_recyclerview_herbs.xml
+++ b/app/src/main/res/layout/item_recyclerview_herbs.xml
@@ -10,6 +10,7 @@
         android:layout_height="wrap_content">
 
     <LinearLayout
+            android:id="@+id/le1"
             android:layout_width="120dp"
             android:layout_height="180dp"
             android:orientation="vertical">
