(KASINPOD) fixbug game

--- a/app/src/main/res/layout/activity_jigsaw.xml
+++ b/app/src/main/res/layout/activity_jigsaw.xml
@@ -7,6 +7,21 @@
         android:background="@drawable/background_game"
         tools:context=".ui.game.JigsawActivity">
 
+    <TextView
+            android:id="@+id/text_score_game1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="8dp"
+            android:padding="8dp"
+            android:text="Score : 0"
+            android:textSize="22sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
     <ImageView
             android:id="@+id/game1_back"
             android:layout_width="80dp"
