--- a/app/src/main/res/layout/puzzle_activity.xml
+++ b/app/src/main/res/layout/puzzle_activity.xml
@@ -3,7 +3,54 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    android:weightSum="2">
+    android:weightSum="3">
+
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1.2"
+            android:padding="8dp"
+            android:gravity="top"
+            android:background="@color/white"
+            android:orientation="vertical">
+
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+            <ImageView
+                    android:layout_gravity="center"
+                    android:layout_width="36dp"
+                    android:layout_height="36dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="8dp"
+                    android:src="@drawable/ic_clock" />
+
+
+            <TextView
+                    android:id="@+id/text_time_jic"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginRight="8dp"
+                    android:layout_marginBottom="8dp"
+                    android:padding="8dp"
+                    android:text="00"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+
+        </LinearLayout>
+
+        <ImageView
+                android:id="@+id/image_show_title"
+                android:layout_width="match_parent"
+                android:src="@color/greyDark"
+                android:layout_height="wrap_content"/>
+
+    </LinearLayout>
 
     <FrameLayout
         android:id="@+id/scrollView"
@@ -11,6 +58,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="center"
         android:layout_margin="10dp"
+            android:background="@drawable/bg_edittext"
         android:layout_weight="0.6">
 
         <ImageView
@@ -18,7 +66,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:alpha="0.2"
-            android:background="#6b6b6b"
+            android:background="@color/greyDark"
             android:gravity="center">
 
         </ImageView>
@@ -36,7 +84,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1.4"
+        android:layout_weight="1.2"
         android:orientation="vertical">
 
         <ListView
