--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -122,6 +122,18 @@
     </LinearLayout>
 
     <ImageView
+            android:id="@+id/click_help_game"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_marginStart="8dp"
+            android:padding="5dp"
+            android:background="@drawable/bg_help"
+            android:layout_marginBottom="8dp"
+            android:src="@drawable/icon_help"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_marginRight="@dimen/margin_8_dp"
