--- a/app/src/main/res/layout/puzzle_activity.xml
+++ b/app/src/main/res/layout/puzzle_activity.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal"
-    android:weightSum="3">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/background"
+        android:orientation="horizontal"
+        android:weightSum="3">
 
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1.2"
-            android:padding="8dp"
             android:gravity="top"
-            android:background="@color/white"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:padding="8dp">
 
         <LinearLayout
                 android:layout_width="match_parent"
@@ -21,9 +21,9 @@
                 android:orientation="horizontal">
 
             <ImageView
-                    android:layout_gravity="center"
                     android:layout_width="36dp"
                     android:layout_height="36dp"
+                    android:layout_gravity="center"
                     android:layout_marginTop="8dp"
                     android:layout_marginBottom="8dp"
                     android:src="@drawable/ic_clock" />
@@ -47,57 +47,66 @@
         <ImageView
                 android:id="@+id/image_show_title"
                 android:layout_width="match_parent"
-                android:src="@color/greyDark"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:src="@color/greyDark" />
 
     </LinearLayout>
 
     <FrameLayout
-        android:id="@+id/scrollView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:layout_margin="10dp"
-            android:background="@drawable/bg_edittext"
-        android:layout_weight="0.6">
+            android:id="@+id/scrollView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:layout_margin="16dp"
+            android:layout_weight="0.6"
+            android:background="@drawable/bg_edittext">
 
-        <ImageView
-            android:id="@+id/frameImage"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:alpha="0.2"
-            android:background="@color/greyDark"
-            android:gravity="center">
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:background="@color/white"
+                android:gravity="center">
 
-        </ImageView>
+            <ImageView
+                    android:id="@+id/frameImage"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:alpha="0.2"
+                    android:layout_gravity="center"
+                    android:background="@color/greyDark"
+                    android:gravity="center" >
+            </ImageView>
+
+        </LinearLayout>
 
         <RelativeLayout
-            android:id="@+id/relativeLayout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@android:color/transparent"
-            android:gravity="center">
+                android:id="@+id/relativeLayout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:background="@android:color/transparent"
+                android:gravity="center">
 
         </RelativeLayout>
     </FrameLayout>
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1.2"
-        android:orientation="vertical">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1.2"
+            android:orientation="vertical">
 
         <ListView
-            android:id="@+id/listView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:visibility="gone" />
+                android:id="@+id/listView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="gone" />
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/listView2"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="#ffff" />
+                android:id="@+id/listView2"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
 
     </LinearLayout>
 </LinearLayout>
